--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@200..700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -46,14 +46,14 @@
     --muted-foreground: 215 20.2% 65.1%;
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0 62.8% 20.6%;
     --destructive-foreground: 210 40% 98%;
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
+    --chart-3: 20 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
@@ -100,4 +100,20 @@
 
 .cl-internal-1dauvpw {
   background: rgba(235, 234, 234, 0);
+}
+
+.login-animation {
+  animation: login 2s linear infinite;
+}
+
+@keyframes login {
+  0% {
+    box-shadow: 0 0 20px rgb(46, 46, 232);
+  }
+  50% {
+    box-shadow: 0 0 20px rgb(218, 25, 25);
+  }
+  100% {
+    box-shadow: 0 0 20px rgb(1, 171, 57);
+  }
 }
